syntax = "proto3";


option csharp_namespace = "CareerCloud.gRPC.Protos";

import "google/protobuf/Empty.proto";
import "google/protobuf/timestamp.proto";

package CareerCloud.gRPC;

service ApplicantEducation{
	rpc GetApplicationEducation(IdRequestEducation) returns(ApplicantEducationPayLoad);
	rpc CreateApplicantEducation(ApplicantEducationPayLoad) returns(google.protobuf.Empty);
	rpc UpdateApplicantEducataion(ApplicantEducationPayLoad) returns(google.protobuf.Empty);
	rpc DeleteApplicantEducation(ApplicantEducationPayLoad) returns(google.protobuf.Empty);
}

message IdRequestEducation{
	string Id = 1;
}

message ApplicantEducationPayLoad{
        string Id = 1;
        string Applicant = 2; 
        string Major = 3;
        string CertificateDiploma = 4; 
        google.protobuf.Timestamp StartDate = 5;
        google.protobuf.Timestamp CompletionDate = 6 ;
        int32 CompletionPercent = 7 ;
        }

